Page header with trigger option - alignment issue fix

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -783,7 +783,7 @@ ul.entity_title {
 .admin_pause_info_and_controls {
   float:       left;
   margin-top:  7px;
-  min-width:   70%;
+  min-width:   30%;
   margin-left: 0;
 }
 
@@ -3481,7 +3481,10 @@ form#package_repositories_edit_form {
     }
   }
 }
-.edit_icon_disabled, .lock_icon_disabled {
+
+.content_wrapper_outer {
+  clear: both;
+}.edit_icon_disabled, .lock_icon_disabled {
   padding-left: 20px !important;
   margin-top:   3px;
   margin-left:  10px;
